--- a/src/component/footer/Footer.module.css
+++ b/src/component/footer/Footer.module.css
@@ -2,7 +2,7 @@
     font-size: medium;
 }
 .footer{
-    height:70px;
+    height:fit-content;
     flex-wrap:wrap;
     
     align-items:center;
